# ADTChase-Legacy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: level.h  menu.h  raylib_extras.h  set_utils.h  state.h  vec2.h
modules/: set_utils.c  vec2.c
src/: boss_fight.c  boss_fight.h  game.c  global_stats.c  global_stats.h  interface.c  interface.h  level.c  menu.c  state.c  state.h
